tests/invalid/missing_first_op.c
int main() {
    return /3;
}
// ERROR: Line 2, Error 2009